--- a/index.html
+++ b/index.html
@@ -8,30 +8,29 @@
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
+    <script src="js/Player.js"></script>
+    <script src="js/Game.js"></script>
+    <script src="js/Form.js"></script>
+   <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-    https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script>
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    var firebaseConfig = {
-    apiKey: "AIzaSyAOOpPFgmKUoro-Mfc7qAw47s8_QtbLUgU",
-    authDomain: "aayan-950ba.firebaseapp.com",
-    databaseURL: "https://aayan-950ba.firebaseio.com",
-    projectId: "aayan-950ba",
-    storageBucket: "aayan-950ba.appspot.com",
-    messagingSenderId: "203063742435",
-    appId: "1:203063742435:web:1c0cddeb9be4d6f6f85ad6",
-    measurementId: "G-D67WSXJF56"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBOtxmY_jIVCQSXwBXjcbSnxEUrYAmpNT8",
+    authDomain: "carracinggame-378eb.firebaseapp.com",
+    databaseURL: "https://carracinggame-378eb.firebaseio.com",
+    projectId: "carracinggame-378eb",
+    storageBucket: "carracinggame-378eb.appspot.com",
+    messagingSenderId: "1018645233487",
+    appId: "1:1018645233487:web:7f13e2a22e118316fc0f3a"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
 </script>
   </head>
   <body>
